fix(dialog): removed overflow-y from window

--- a/packages/skin/src/sass/mixins/private/_dialog-mixins.scss
+++ b/packages/skin/src/sass/mixins/private/_dialog-mixins.scss
@@ -13,7 +13,6 @@
     bottom: 0;
     left: 0;
     -webkit-overflow-scrolling: touch;
-    overflow-y: auto;
     position: fixed;
     right: 0;
     top: 0;
